hphp/test/zend/good/tests-lang/passByReference_002.php
<?php

function f(&$arg1)
{
	var_dump($arg1++);
}

f(2);

?>